--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0"
 env_logger = "0.10.0"
 parol_runtime = { version = "0.17.1", features = ["auto_generation"] }
 thiserror = "1.0"
-html-builder = "0.5.1"
+build_html = "2.4.0"
 
 [build-dependencies]
 parol = "0.22.1"
