--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ authors = ["Thomas Wehmoeller"]
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
 parasite = { path = "../parasite" }
-ariadne = "0.4.0"
+miette = { version = "7.1.0", features = ["fancy"] }
+thiserror = "1.0"
