--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ clap = { version = "4.4.18", features = ["derive"] }
 parasite = { path = "../parasite" }
 miette = { version = "7.1.0", features = ["fancy"] }
 thiserror = "1.0"
+pdf-writer = { version = "0.9.2", optional = true }
+
+[features]
+default = ["pdf"]
+pdf = ["pdf-writer"]
