--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,15 @@ clap = { version = "4.4.18", features = ["derive"] }
 parasite = { path = "../parasite" }
 miette = { version = "7.1.0", features = ["fancy"] }
 thiserror = "1.0"
-enum-map = "2.7"
 pdf-writer = { version = "0.9.2", optional = true }
 docx-rs = { version = "0.4.8", optional = true }
+html-writer = { path = "crates/html-writer" }
 
 [features]
-default = ["pdf", "docx"]
+default = ["pdf", "docx", "html"]
 pdf = ["pdf-writer"]
 docx = ["docx-rs"]
+html = []
+
+[workspace]
+members = ["crates/*"]
