--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,14 @@ clap = { version = "4.4.18", features = ["derive"] }
 parasite = { path = "../parasite" }
 miette = { version = "7.1.0", features = ["fancy"] }
 thiserror = "1.0"
-pdf-writer = { version = "0.9.2", optional = true }
-docx-rs = { version = "0.4.8", optional = true }
 html-writer = { path = "crates/html-writer" }
+pandoc_ast = "0.8.6"
+pandoc = { version = "0.8.11", optional = true }
 
 [features]
 default = ["pdf", "docx", "html"]
-pdf = ["pdf-writer"]
-docx = ["docx-rs"]
+pdf = ["pandoc"]
+docx = ["pandoc"]
 html = []
 
 [workspace]
