--- a/crates/tyd-render/Cargo.toml
+++ b/crates/tyd-render/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "html-writer"
+name = "tyd-render"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tyd-syntax = { path = "../tyd-syntax" }
+miette = "7.1.0"
