--- a/crates/tyd-syntax/Cargo.toml
+++ b/crates/tyd-syntax/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-parasite = { path = "../../../parasite" }
+parasite = { git = "https://github.com/MordragT/parasite.git" }
 miette = "7.1.0"
 thiserror = "1.0"
