--- a/crates/tyd-syntax/Cargo.toml
+++ b/crates/tyd-syntax/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 miette = { version = "7.1.0", features = ["fancy"] }
 thiserror = "1.0"
 chumsky = "=1.0.0-alpha.6"
+constcat = "0.4.1"
