--- a/crates/tyd-syntax/Cargo.toml
+++ b/crates/tyd-syntax/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 # parasite = { git = "https://github.com/MordragT/parasite.git" }
 miette = { version = "7.1.0", features = ["fancy"] }
 thiserror = "1.0"
-chumsky = "=1.0.0-alpha.6"
+chumsky = "=1.0.0-alpha.7"
 constcat = "0.4.1"
+ecow = "0.2.0"
