--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["Thomas Wehmoeller"]
 [dependencies]
 clap = { version = "4.4.18", features = ["derive"] }
 miette = { version = "7.1.0", features = ["fancy"] }
+thiserror = "1.0"
 tyd-syntax = { path = "crates/tyd-syntax" }
 tyd-render = { path = "crates/tyd-render" }
 tyd-pandoc = { path = "crates/tyd-pandoc" }
