--- a/crates/tyd-syntax/Cargo.toml
+++ b/crates/tyd-syntax/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# parasite = { git = "https://github.com/MordragT/parasite.git" }
-miette = { version = "7.1.0", features = ["fancy"] }
+miette = "7.1.0"
 thiserror = "1.0"
 chumsky = "=1.0.0-alpha.7"
 constcat = "0.4.1"
