--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "4.4.18", features = ["derive"] }
 miette = { version = "7.1.0", features = ["fancy"] }
 thiserror = "1.0"
 tyd-syntax = { path = "crates/tyd-syntax" }
-tyd-render = { path = "crates/tyd-render" }
+tyd-eval = { path = "crates/tyd-eval" }
 tyd-pandoc = { path = "crates/tyd-pandoc" }
 # tyd-html = { path = "crates/tyd-html", optional = true }
 
@@ -28,6 +28,6 @@ members = [
     # "crates/*"
     "crates/tyd-language-server",
     "crates/tyd-pandoc",
-    "crates/tyd-render",
+    "crates/tyd-eval",
     "crates/tyd-syntax",
 ]
