--- a/crates/tyd-pandoc/Cargo.toml
+++ b/crates/tyd-pandoc/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 
 [dependencies]
 tyd-syntax = { path = "../tyd-syntax" }
-tyd-render = { path = "../tyd-render" }
+tyd-eval = { path = "../tyd-eval" }
 miette = "7.1.0"
 thiserror = "1.0"
 pandoc_ast = "0.8.6"
 pandoc = "0.8.11"
+ecow = "0.2.0"
