--- a/crates/tyd-pandoc/Cargo.toml
+++ b/crates/tyd-pandoc/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tyd-syntax = { path = "../tyd-syntax" }
-tyd-eval = { path = "../tyd-eval" }
-miette = "7.1.0"
-thiserror = "1.0"
+tyd-syntax.workspace = true
+tyd-eval.workspace = true
+miette.workspace = true
+thiserror.workspace = true
+ecow.workspace = true
 pandoc_ast = "0.8.6"
 pandoc = "0.8.11"
-ecow = "0.2.0"
