--- a/crates/tyd-syntax/Cargo.toml
+++ b/crates/tyd-syntax/Cargo.toml
@@ -6,12 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-miette = "7.1.0"
-thiserror = "1.0"
-chumsky = { version = "=1.0.0-alpha.7", features = [
-    "label",
-    "nightly",
-    "unstable",
-] }
+tyd-util.workspace = true
+tyd-doc.workspace = true
+miette.workspace = true
+thiserror.workspace = true
+ecow.workspace = true
+chumsky = { version = "=1.0.0-alpha.8", features = ["nightly", "unstable"] }
 constcat = "0.4.1"
-ecow = "0.2.0"
