--- a/crates/tyd-pandoc/Cargo.toml
+++ b/crates/tyd-pandoc/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 tyd-syntax.workspace = true
+tyd-doc.workspace = true
 tyd-eval.workspace = true
 miette.workspace = true
 thiserror.workspace = true
 ecow.workspace = true
-pandoc_ast = "0.8.6"
 pandoc = "0.8.11"
+serde_json = "1.0"
