--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,8 @@ members = ["crates/*"]
 
 [workspace.dependencies]
 tyd-syntax = { path = "crates/tyd-syntax" }
-tyd-doc = { path = "crates/tyd-doc" }
+tyd-core = { path = "crates/tyd-core" }
 tyd-eval = { path = "crates/tyd-eval" }
-tyd-pandoc = { path = "crates/tyd-pandoc" }
-tyd-util = { path = "crates/tyd-util" }
 clap = { version = "4.5", features = ["derive"] }
 miette = { version = "7.5", features = ["fancy"] }
 thiserror = "2.0"
@@ -22,9 +20,9 @@ authors = ["Thomas Wehmoeller"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap.workspace = true
-miette.workspace = true
-thiserror.workspace = true
+tyd-core.workspace = true
 tyd-syntax.workspace = true
 tyd-eval.workspace = true
-tyd-pandoc.workspace = true
+clap.workspace = true
+miette.workspace = true
+ecow.workspace = true
