--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,10 +37,13 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
+          path: ./docs
           node-version: 20
           cache: pnpm
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        with:
+          path: ./docs
       - name: Install dependencies
         run: pnpm install
       - name: Build with VitePress
