--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -37,9 +37,9 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          path: ./docs
           node-version: 20
           cache: pnpm
+          cache-dependency-path: ./docs/pnpm-lock.yaml
       - name: Setup Pages
         uses: actions/configure-pages@v4
         with:
@@ -51,7 +51,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vitepress/dist
+          path: ./docs/.vitepress/dist
 
   deploy:
     environment:
