--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,7 @@
 				"isDefault": true
 			},
 			"options": {
-				"cwd": "${workspaceFolder}/extension"
+				"cwd": "${workspaceFolder}/crates/tyd-vscode-extension"
 			}
 		}
 	]
