--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
-members = ["crates/tyd-syntax", "crates/tyd-core", "crates/tyd-eval"]
+members = [
+    "crates/tyd-core",
+    "crates/tyd-eval",
+    "crates/tyd-language-server",
+    "crates/tyd-zed-extension",
+]
 
 [workspace.dependencies]
 tyd-syntax = { path = "crates/tyd-syntax" }
@@ -9,6 +14,7 @@ clap = { version = "4.5", features = ["derive"] }
 miette = { version = "7.5", features = ["fancy"] }
 thiserror = "2.0"
 ecow = "0.2"
+ropey = "1.6"
 derive_more = { version = "2", features = ["from"] }
 
 [package]
