--- a/crates/tyd-language-server/Cargo.toml
+++ b/crates/tyd-language-server/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tyd-core.workspace = true
 tyd-syntax.workspace = true
 tyd-eval.workspace = true
 ecow.workspace = true
-tower-lsp = { version = "0.20.0", default-features = false, features = [
-    "runtime-agnostic",
-] }
-async-std = "1.12.0"
+ropey.workspace = true
+miette.workspace = true
+tower-lsp = "0.20.0"
+tokio = { version = "1.44", features = ["full"] }
 dashmap = "5.5"
-ropey = "1.6"
