--- a/crates/tyd-zed-extension/extension.toml
+++ b/crates/tyd-zed-extension/extension.toml
@@ -5,3 +5,7 @@ schema_version = 1
 authors = ["Thomas Wehmöller <contact.mordrag+zed@gmail.com>"]
 description = "Provides TypeDown support for Zed."
 repository = "https://github.com/MordragT/type-down"
+
+[language_servers.type-down]
+name = "TypeDown LSP"
+languages = ["TypeDown"]
